objects/vlocity_cmt__PriceList__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CountOfActiveEntries__c</fullName>
        <description>Count of active entries.This field rolls up the count of active price list entries present for this price list.</description>
        <label># of Entries</label>
        <summaryFilterItems>
            <field>vlocity_cmt__PriceListEntry__c.vlocity_cmt__IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>vlocity_cmt__PriceListEntry__c.vlocity_cmt__PriceListId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CurrencyCode__c</fullName>
        <label>Currency Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__CurrencyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of this Price List. Used to identify the price list across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique price list identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LoyaltyCode__c</fullName>
        <label>Loyalty Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>vlocity_cmt__LoyaltyCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentPriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Price List</label>
        <referenceTo>vlocity_cmt__PriceList__c</referenceTo>
        <relationshipName>ChildPriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipName>PriceLists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>PriceList</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>vlocity_cmt__Vlocity_EPC_Price_List</fullName>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>NAME</columns>
        <columns>vlocity_cmt__ParentPriceListId__c</columns>
        <columns>vlocity_cmt__Code__c</columns>
        <columns>vlocity_cmt__CountOfActiveEntries__c</columns>
        <columns>vlocity_cmt__EffectiveFromDate__c</columns>
        <columns>vlocity_cmt__EffectiveUntilDate__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>Vlocity EPC Price List</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PriceList</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__PriceList</fullName>
        <active>true</active>
        <description>PriceList record</description>
        <label>PriceList</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>vlocity_cmt__EffectiveFromDate_Greater_UntilDate</fullName>
        <active>true</active>
        <errorConditionFormula>vlocity_cmt__EffectiveFromDate__c &gt; vlocity_cmt__EffectiveUntilDate__c</errorConditionFormula>
        <errorDisplayField>vlocity_cmt__EffectiveUntilDate__c</errorDisplayField>
        <errorMessage>Effective Until Date should be greater than or equal to Effective From Date.</errorMessage>
    </validationRules>
</CustomObject>